change images for welcome page, fix monor layout issue

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -15,10 +15,10 @@
 /*  --- 大图高度 和 滚动按钮 ---  */
 .fade-carousel {                                      //滚动大图的相框高
     position: relative;
-    height: 600px;
+    height: 700px;
 }
 .fade-carousel .carousel-inner .item {                //图片截取的宽度，这里与相框高度一致
-    height: 600px;
+    height: 700px;
 }
 .fade-carousel .carousel-indicators > li {            //滚动按钮的设置
     width: 5px;
@@ -106,19 +106,22 @@
 .fade-carousel .slides .slide-1,
 .fade-carousel .slides .slide-2,
 .fade-carousel .slides .slide-3 {
-  height: 600px;
+  height: 1000px;
   background-size: cover;                             //确保图片完全撑开
   background-position: center;
   background-repeat: no-repeat;
 }
 .fade-carousel .slides .slide-1 {
-  background-image: url(https://ws3.sinaimg.cn/large/006tNbRwgy1fgf1itg40cj319u0uk0y3.jpg);
+  // background-image: url(https://ws3.sinaimg.cn/large/006tNbRwgy1fgf1itg40cj319u0uk0y3.jpg);
+  background-image: url(https://ws4.sinaimg.cn/large/006tNbRwgy1fgfd928vqnj31kw11x1kx.jpg);
 }
 .fade-carousel .slides .slide-2 {
-  background-image: url(https://ws3.sinaimg.cn/large/006tNbRwgy1fgf1jl1b5lj31kw11xjwd.jpg);
+  // background-image: url(https://ws3.sinaimg.cn/large/006tNbRwgy1fgf1jl1b5lj31kw11xjwd.jpg);
+background-image: url(https://ws2.sinaimg.cn/large/006tNbRwgy1fgfd94eebnj31ag0rse81.jpg);
 }
 .fade-carousel .slides .slide-3 {
-  background-image: url(https://ws3.sinaimg.cn/large/006tNbRwgy1fgf1kkrhqhj319u0ukwhw.jpg);
+  // background-image: url(https://ws3.sinaimg.cn/large/006tNbRwgy1fgf1kkrhqhj319u0ukwhw.jpg);
+  background-image: url(https://ws1.sinaimg.cn/large/006tNbRwgy1fgfd983l4lj31de0rshdt.jpg);
 }
 
 /*  --- 响应式设置 ---  */
@@ -143,7 +146,8 @@
 }
 
 .lg-section-2 {
-    height: 680px;
+  margin-bottom: 50px;
+  height: auto;
 }
 .lg-section-2 .content-2 {
     padding-top: 90px;
@@ -301,6 +305,7 @@
     min-width: 960px;
     height: 300px;
     position: relative;
+    margin-bottom: -69px;
 }
 .lg-action .action-content {
     display: block;
